--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/roboto": "^4.2.1",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "axios": "^0.21.1",
+    "ndarray": "^1.0.19",
+    "ndarray-concat-rows": "^1.0.1",
+    "ndarray-ops": "^1.2.2",
+    "onnxjs": "^0.1.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-scripts": "4.0.3",
+    "wave-resampler": "^1.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
