--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,22 +3,51 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fontsource/roboto": "^4.2.1",
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@tensorflow/tfjs": "^3.1.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.3",
-    "axios": "^0.21.1",
-    "colormap": "^2.3.2",
-    "ndarray": "^1.0.19",
-    "ndarray-concat-rows": "^1.0.1",
-    "ndarray-ops": "^1.2.2",
-    "onnxjs": "^0.1.8",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-dropzone": "^11.3.1",
+    "@reduxjs/toolkit": "1.5.0",
+    "@testing-library/jest-dom": "5.11.4",
+    "@testing-library/react": "11.0.2",
+    "@types/fontfaceobserver": "0.0.6",
+    "@types/jest": "25.1.4",
+    "@types/local-storage": "1.4.0",
+    "@types/node": "14.6.4",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "16.9.8",
+    "@types/react-redux": "7.1.9",
+    "@types/react-router-dom": "5.1.5",
+    "@types/react-test-renderer": "16.9.3",
+    "@types/rimraf": "3.0.0",
+    "@types/shelljs": "0.8.8",
+    "@types/styled-components": "5.1.3",
+    "@types/testing-library__jest-dom": "5.9.2",
+    "@types/webpack": "4.41.22",
+    "@types/webpack-env": "1.15.2",
+    "chalk": "4.1.0",
+    "cross-env": "7.0.2",
+    "dotenv": "8.2.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react-hooks": "4.1.0",
+    "fontfaceobserver": "2.1.0",
+    "husky": "4.2.5",
+    "i18next": "19.7.0",
+    "i18next-browser-languagedetector": "6.0.1",
+    "i18next-scanner": "2.11.0",
+    "inquirer": "7.3.3",
+    "inquirer-directory": "2.2.0",
+    "jest-styled-components": "7.0.3",
+    "lint-staged": "10.3.0",
+    "local-storage": "2.0.0",
+    "node-plop": "0.26.2",
+    "plop": "2.7.4",
+    "prettier": "2.1.1",
+    "react": "16.13.1",
+    "react-app-polyfill": "1.0.6",
+    "react-dom": "16.13.1",
+    "react-dropzone": "11.3.1",
+    "react-helmet-async": "1.0.6",
+    "react-i18next": "11.7.2",
+    "react-redux": "7.2.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "wave-resampler": "^1.0.0",
     "web-vitals": "^1.1.0"
