lots of frontend design

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/roboto": "4.2.2",
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.57",
@@ -38,12 +39,17 @@
     "inquirer": "7.3.3",
     "inquirer-directory": "2.2.0",
     "jest-styled-components": "7.0.3",
+    "jwt-decode": "3.1.2",
     "lint-staged": "10.3.0",
     "local-storage": "2.0.0",
     "node-plop": "0.26.2",
     "plop": "2.7.4",
     "prettier": "2.1.1",
+    "prop-types": "15.7.2",
+    "ra-data-json-server": "3.14.2",
+    "ra-data-simple-rest": "3.13.4",
     "react": "16.13.1",
+    "react-admin": "3.14.2",
     "react-app-polyfill": "1.0.6",
     "react-dom": "16.13.1",
     "react-dropzone": "11.3.1",
