--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,4 +2,5 @@ BROWSER=none
 FAST_REFRESH=true
 EXTEND_ESLINT=true
 REACT_APP_SPOTIFY_CLIENT_ID=Client ID for Spotify API goes here (not the client secret!)
-REACT_APP_REDIRECT_URI=http://localhost:3000/
+REACT_APP_REDIRECT_URL=http://localhost:3000/
+REACT_APP_BACKEND_URL=http://localhost:8000/api/v1
