--- a/backend/app/pyproject.toml
+++ b/backend/app/pyproject.toml
@@ -21,12 +21,15 @@ sentry-sdk = "^1.0.0"
 gunicorn = "^20.0.4"
 jinja2 = "^2.11.3"
 psycopg2-binary = "^2.8.6"
+boto3 = "^1.17.49"
+geomstats = "^2.2.2"
 aiofiles = "^0.6.0"
-audioread = "^2.1.9"
+ffmpeg-python = "^0.2.0"
+librosa = "^0.8.0"
 faiss-cpu = "^1.7.0"
 numpy = "^1.19.5"
 pandas = "^1.2.3"
-tensorflow = "^2.4.1"
+tensorflow = "^2.4.0"
 watchdog = "^2.0.2"
 argh = "^0.26.2"
 PyYAML = "^5.4.1"
