draft worker ingestion and inference tasks

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -69,7 +69,7 @@ services:
     volumes:
       - ./backend/app:/app
     environment:
-      - RUN=watchmedo auto-restart --directory=./ --pattern=*.py --recursive -- celery --app app.worker worker --loglevel=DEBUG -Q main-queue -c 1
+      - RUN=watchmedo auto-restart --directory=./ --pattern=*.py --recursive -- celery --app app.worker worker --loglevel=DEBUG -Q main-queue -c 1 --without-gossip -O fair --prefetch-multiplier 1
       - JUPYTER=jupyter lab --ip=0.0.0.0 --port=8889 --allow-root --NotebookApp.custom_display_url=http://127.0.0.1:8888
       - SERVER_HOST=http://${DOMAIN?Variable not set}
       - SQLALCHEMY_ECHO=true
