--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "i18next": "19.7.0",
     "i18next-browser-languagedetector": "6.0.1",
     "i18next-scanner": "2.11.0",
+    "immer": "8.0.2",
     "inquirer": "7.3.3",
     "inquirer-directory": "2.2.0",
     "jest-styled-components": "7.0.3",
@@ -65,6 +66,7 @@
     "sanitize.css": "12.0.1",
     "serve": "11.3.2",
     "shelljs": "0.8.4",
+    "standardized-audio-context": "25.1.14",
     "styled-components": "5.1.0",
     "stylelint": "13.7.0",
     "stylelint-config-recommended": "3.0.0",
