--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Earworm",
+  "name": "Earworm: Royalty-free music search",
   "icons": [
     {
       "src": "favicon.ico",
