remove unused imports

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@types/testing-library__jest-dom": "5.9.2",
     "@types/webpack": "4.41.22",
     "@types/webpack-env": "1.15.2",
+    "axios": "0.21.1",
     "chalk": "4.1.0",
     "cross-env": "7.0.2",
     "dotenv": "8.2.0",
@@ -56,6 +57,7 @@
     "react-dropzone": "11.3.1",
     "react-helmet-async": "1.0.6",
     "react-i18next": "11.7.2",
+    "react-query": "3.13.10",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
