Draft initial backend api interactions

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -125,6 +125,7 @@
       "pre-commit": "yarn run checkTs && lint-staged"
     }
   },
+  "proxy": "http://localhost",
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
