--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,9 +62,8 @@
     "react-query": "3.13.10",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-test-renderer": "16.13.1",
-    "redux-injectors": "1.3.0",
     "redux-saga": "1.1.3",
     "rimraf": "3.0.2",
     "sanitize.css": "12.0.1",
