--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@fontsource/roboto": "4.2.2",
     "@material-ui/core": "4.11.3",
-    "@material-ui/data-grid": "4.0.0-alpha.8",
+    "@material-ui/data-grid": "4.0.0-alpha.25",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.57",
     "@reduxjs/toolkit": "1.5.0",
@@ -50,20 +50,18 @@
     "plop": "2.7.4",
     "prettier": "2.1.1",
     "prop-types": "15.7.2",
-    "ra-data-json-server": "3.14.2",
-    "ra-data-simple-rest": "3.13.4",
-    "react": "16.13.1",
-    "react-admin": "3.14.2",
+    "react": "17.0.2",
     "react-app-polyfill": "1.0.6",
-    "react-dom": "16.13.1",
+    "react-dom": "17.0.2",
     "react-dropzone": "11.3.1",
-    "react-helmet-async": "1.0.6",
+    "react-helmet": "6.1.0",
+    "react-helmet-async": "^1.0.6",
     "react-i18next": "11.7.2",
     "react-query": "3.13.10",
-    "react-redux": "7.2.1",
+    "react-redux": "^7.2.3",
     "react-router-dom": "5.2.0",
-    "react-scripts": "^4.0.3",
-    "react-test-renderer": "16.13.1",
+    "react-scripts": "4.0.3",
+    "react-test-renderer": "17.0.2",
     "redux-saga": "1.1.3",
     "rimraf": "3.0.2",
     "sanitize.css": "12.0.1",
@@ -146,6 +144,7 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "7.13.15",
     "@types/wavesurfer.js": "3.3.2",
     "comlink-loader": "2.0.0"
   }
