--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,6 +12,11 @@ COPY package.json /app/
 ENV NODE_PATH=/node_modules
 ENV PATH=$PATH:/node_modules/.bin
 
+ARG GENERATE_SOURCEMAP
+ARG REACT_APP_SPOTIFY_CLIENT_ID
+ARG REACT_APP_REDIRECT_URL
+ARG REACT_APP_GA_MEASUREMENT_ID
+
 RUN yarn install
 
 COPY ./ /app/
