use rex ray for persistent storage

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -100,3 +100,6 @@ networks:
   traefik-public:
     # For local dev, don't expect an external Traefik network
     external: false
+
+volumes: 
+  app-db-data:
