add .env.example and update readme

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,6 @@
 BROWSER=none
-FAST_REFRESH=true
 EXTEND_ESLINT=true
-REACT_APP_SPOTIFY_CLIENT_ID=Client ID for Spotify API goes here (not the client secret!)
+FAST_REFRESH=true
+REACT_APP_SPOTIFY_CLIENT_ID="Get this by registering a Spotify developer account and creating an app"
 REACT_APP_REDIRECT_URL=http://localhost:3000/
-REACT_APP_BACKEND_URL=http://localhost:8000/api/v1
+REACT_APP_GA_MEASUREMENT_ID=undefined
