--- a/frontend/package.json
+++ b/frontend/package.json
@@ -145,6 +145,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.13.15",
+    "@types/react-helmet": "6.1.1",
     "@types/wavesurfer.js": "3.3.2",
     "comlink-loader": "2.0.0"
   }
